--- a/ISTI_CityNavigation/MasterPage.Master
+++ b/ISTI_CityNavigation/MasterPage.Master
@@ -616,7 +616,7 @@
 	    c0.827-1.39-0.551-4.695-0.551-5.38c0-0.683,1.653-2.622,2.205-3.438c0.551-0.839,1.653-2.072,1.929-2.624s1.377-1.786,1.784-2.888
 	    c0.42-1.104-0.683-2.348-1.367-4.276c-0.692-1.93,1.512-4.277,1.512-5.512s1.796-1.377,2.897-1.785
 	    c1.103-0.42,3.307-0.971,3.307-0.971l3.021,0.551L435.313,287.525z"
-                        class="areabox itemhintfollow" title="臺東縣" /></a>
+                        class="areaboxB itemhintfollow" title="臺東縣" /></a>
                     <a name="linkbtn" city="16" href="javascript:void(0);"><path style="" d="M462.901,154.003c0.981,0,6.811,0,8.136,0c-0.386,1.521-0.773,2.898-1.114,3.99
 	    c-1.653,5.235-0.826,6.062-3.857,9.368s-6.889,3.583-8.817,8.267c-1.93,4.684,0.552,7.715-1.378,10.195
 	    c-1.929,2.48-3.857,6.889-3.857,9.369c0,2.48,2.204,4.96,2.755,6.063s1.654,1.929-0.275,3.582c-1.929,1.654-4.408,3.858-4.408,5.511
@@ -654,7 +654,7 @@
 	    c1.51,0.694,2.205,1.653,3.714,1.377c1.521-0.275,0.971,0.132,2.755-0.827c1.797-0.959,1.654-0.408,2.625-2.205
 	    c0.968-1.796,2.621-3.714,2.621-3.714s0.816-0.838,3.021,0.551c2.204,1.367,3.45,1.367,4.276,2.336
 	    C460.555,153.452,461.799,154.003,462.901,154.003z"
-                        class="areabox itemhintfollow" title="花蓮縣">
+                        class="areaboxB itemhintfollow" title="花蓮縣">
                     </path></a>
                     <a name="linkbtn" city="14" href="javascript:void(0);"><path style="" d="M341.14,399.07c0,0.032,0.1,0.375,0.232,1.962c0.287,3.175-1.367,3.175-2.339,4.961
 	    c-0.968,1.784-2.621,3.725-3.437,5.643c-0.839,1.939-1.39,3.042-1.39,4.145s-1.787,1.785-0.815,3.163
@@ -717,7 +717,7 @@
 	    c1.104,0.551,0.265,0.551,2.337,1.388c0,0,0.97,3.715,1.103,4.122c0.132,0.42-0.419,0.695-0.552,2.348
 	    c-0.134,1.654-1.929,1.246-1.929,1.246s-1.929,2.612-1.929,3.02c0,0.42,0.275,1.654,0.275,1.654s1.378,0.418,4.685,1.796
 	    c3.308,1.379,0.683,0.552,1.93,1.654c1.243,1.102,0,0,0.826,1.653C375.716,305.48,375.871,305.834,376.002,306.099z"
-                        class="areabox itemhintfollow" title="高雄市" /></a>
+                        class="areaboxB itemhintfollow" title="高雄市" /></a>
                     <a name="linkbtn" city="05" href="javascript:void(0);"><path style="" d="M319.327,320.295c-0.265,1.796,0.694,2.612,0.419,3.715c-0.277,1.102,0.275,1.102-1.104,2.898
 	    c-1.378,1.797-1.103,1.93-2.335,3.307c-1.247,1.378-0.972,1.51-2.899,3.715c-1.93,2.204-2.898,1.939-3.714,4.276
 	    c-0.838,2.336-0.286,2.204-1.798,4.133c-1.51,1.93-3.03,4.134-5.235,5.512c-2.204,1.377-4.541,3.163-6.48,4.96
@@ -776,7 +776,7 @@
 	    c0,0,0.286,0.551,2.623,2.623c2.338,2.072-1.785,3.174-1.93,3.725c-0.142,0.552,0.695,2.613,1.379,5.093
 	    c0.684,2.48,5.093,1.654,5.093,1.654s3.448-0.971,4.145-1.521c0.682-0.551,1.652,0.418,3.306,1.521
 	    C332.289,262.153,331.318,264.49,331.452,266.144z"
-                        class="areabox itemhintfollow" title="雲林縣" /></a>
+                        class="areaboxB itemhintfollow" title="雲林縣" /></a>
                     <a name="linkbtn" city="10" href="javascript:void(0);"><path style="" d="M320.848,231.291c0.684,0.683,1.378,1.928,0.971,3.174c-0.42,1.234-0.838,0.958-1.102,1.51
 	    c-0.233,0.452-0.453,0.805-0.763,1.697c-0.627,0.33-0.661,1.719-1.587,0.65c-0.958-1.103-2.898-3.175-3.713-3.726
 	    c-0.838-0.551,0.131-2.072-2.625-1.929c-2.755,0.143-7.296-0.827-9.368-1.245c-2.07-0.408-4.133-1.103-5.787-1.103
@@ -788,7 +788,7 @@
 	    c-0.344,1.179,0,0.75,1.377,1.952c0.244,0.209,0.52,0.474,0.827,0.804c2.062,2.205,0,2.348,0.551,4.96
 	    c0.551,2.624,2.479,4.409,3.858,5.655c1.377,1.245,0.695,1.377-0.143,3.307c-0.816,1.928-0.816,1.653-1.367,4
 	    c-0.552,2.336-0.552,2.756-0.838,3.307c-0.265,0.551-0.685,2.469,0.552,5.368C319.469,231.709,320.166,230.607,320.848,231.291z"
-                        class="areabox itemhintfollow" title="彰化縣" /></a>
+                        class="areaboxB itemhintfollow" title="彰化縣" /></a>
                     <a name="linkbtn" city="11" href="javascript:void(0);"><path style="" d="M319.954,237.673c0.31-0.893,0.529-1.246,0.763-1.697c0.264-0.552,0.682-0.276,1.102-1.51
 	    c0.407-1.246-0.287-2.491-0.971-3.174c-0.682-0.684-1.379,0.418-2.622-2.48c-1.236-2.898-0.816-4.816-0.552-5.368
 	    c0.286-0.551,0.286-0.97,0.838-3.307c0.551-2.348,0.551-2.072,1.367-4c0.838-1.929,1.52-2.062,0.143-3.307
@@ -823,7 +823,7 @@
 	    c-0.696,0.551-4.145,1.521-4.145,1.521s-4.409,0.826-5.093-1.654c-0.684-2.479-1.521-4.541-1.379-5.093
 	    c0.145-0.551,4.268-1.653,1.93-3.725c-2.337-2.072-2.623-2.623-2.623-2.623l1.939-3.021c0,0,2.337-1.653,1.785-3.592
 	    c-0.551-1.918-2.071-2.756-1.652-4.123C319.822,238.081,319.889,237.86,319.954,237.673z"
-                        class="areabox itemhintfollow" title="南投縣" /></a>
+                        class="areaboxB itemhintfollow" title="南投縣" /></a>
                     <a name="linkbtn" city="04" href="javascript:void(0);"><path style="" d="M409.379,139.63c0.551,0.155,1.067,0.484,1.432,1.146c1.246,2.204,0,5.092,2.491,6.063
 	    c2.469,0.959,2.755,2.204,4.959,2.061c2.205-0.143,4.818-1.929,5.776-1.377c0.739,0.418,1.951,0.275,2.922,0.794l-0.022,0.033
 	    c0,0,0.551,5.368-0.275,6.613c-0.826,1.245-1.653,2.898-2.204,3.582s-1.653,1.377-2.479,2.336c-0.827,0.97-1.512,0.97-1.93,2.205
@@ -849,7 +849,7 @@
 	    c0.418-0.132,0.97-1.654,2.756-3.164c1.784-1.511,2.623-1.246,4.827-2.48c2.204-1.234,4.122-3.174,4.409-3.582
 	    c0.264-0.408,1.51-2.205,3.02-2.755c1.522-0.551,1.103,0.826,3.451,1.103c2.347,0.275,0.275-1.378,1.244-3.45
 	    c0.419-0.905,0.972-2.392,1.466-3.77l0.738,0.055l5.512-0.143C406.688,139.939,408.111,139.267,409.379,139.63z"
-                        class="areabox itemhintfollow" title="台中市" /></a>
+                        class="areaboxB itemhintfollow" title="台中市" /></a>
                     <a name="linkbtn" city="09" href="javascript:void(0);"><path style="" d="M358.433,98.629c0.795,0.374,1.49,0.792,1.818,1.222c0.961,1.246,2.901,4.817,3.032,6.757
 	    c0.134,1.918-1.929,2.612,0.551,3.164c2.479,0.551,3.44-0.551,4.828,0.551c1.367,1.102,4.673,2.348,4.816,3.031
 	    c0.143,0.684,1.93,2.479,2.481,3.174c0.551,0.684,1.377-0.287,0.968,1.918c-0.417,2.205,0.685,0.837-0.417,2.205
@@ -869,7 +869,7 @@
 	    c1.84-2.756,3.492-8.267,4.045-8.454c0.551-0.188,3.306-3.67,4.772-4.596c1.466-0.915,7.528-5.511,8.63-6.239
 	    c1.103-0.738,5.886-4.596,6.25-5.886c0.099-0.375,0.409-1.235,0.772-2.26c0.749,0.1,3.194,0.464,3.77,0.927
 	    C355.049,97.316,356.924,97.912,358.433,98.629z"
-                        class="areabox itemhintfollow" title="苗栗縣" /></a>
+                        class="areaboxB itemhintfollow" title="苗栗縣" /></a>
                     <a name="linkbtn" city="07" href="javascript:void(0);"><path style="" d="M421.327,116.858l-0.167-1.057c1.059-0.166,1.962-0.332,2.471-0.375
 	    c1.509-0.144,4.408,0.551,5.102-1.246c0.684-1.797-0.286-4.552,0.265-6.338c0.311-1.003,0.916-2.436,1.423-3.593
 	    c0.353-0.088,3.24-0.86,4.926-1.5c1.787-0.694,4.673-2.623,4.673-2.623s2.626-2.48,4.554-3.583c1.929-1.102,1.378-1.377,1.103-3.164
@@ -890,7 +890,7 @@
 	    c0.1-0.606,0.286-1.654,0.474-2.304c0.275-0.959,0.958-1.796,2.06-3.164c1.103-1.389,2.491-2.623,3.858-4.277
 	    c1.389-1.653,1.798-1.653,2.899-2.479c1.103-0.827,0.827-1.796,1.509-2.898c0.695-1.102-0.131-2.47,0.287-3.858
 	    C420.776,119.625,421.16,117.741,421.327,116.858z"
-                        class="areabox itemhintfollow" title="宜蘭縣" /></a>
+                        class="areaboxB itemhintfollow" title="宜蘭縣" /></a>
                     <a name="linkbtn" city="19" href="javascript:void(0);"><path style="" d="M367.009,84.695c0.132,2.072,1.367,3.175,0.959,4.409c-0.407,1.235-0.143,1.929-1.245,2.624
 	    c-1.102,0.684-1.787,0.551-2.889,1.102c-1.102,0.551-0.682,0.408-2.479,1.918c-1.796,1.521-1.93,2.491-2.347,3.042
 	    c-0.166,0.221-0.389,0.541-0.575,0.839c-1.509-0.717-3.384-1.313-3.834-1.676c-0.575-0.463-3.021-0.827-3.77-0.927
@@ -924,7 +924,7 @@
 	    c1.102,2.072-0.827,5.511-0.133,8.553c0.684,3.02,0.408,2.061,2.889,4.123c2.479,2.071,3.438,3.307,4.826,4.552
 	    c1.367,1.246,4.817,0.826,7.299-0.276c2.479-1.102,0.417-2.755,0.826-4.276c0.406-1.511,1.102-1.786,2.755-3.021
 	    C454.492,53.559,455.318,52.731,455.87,51.905z"
-                        class="areabox itemhintfollow" title="新北市" /></a>
+                        class="areaboxB itemhintfollow" title="新北市" /></a>
                     <a name="linkbtn" city="18" href="javascript:void(0);"><path style="" d="M471.853,36.75l-1.379,0.97c0,0-1.51,2.469-1.245,4.266c0.286,1.796,0.97,2.348,0.419,3.45
 	    c-0.551,1.103-2.889,1.653-6.338,1.653c-3.45,0-2.063-1.389-3.45-2.491c-1.367-1.102-3.162-1.51-4.961-2.205
 	    c-1.784-0.684-1.232-2.336-1.508-3.571c-0.276-1.246-1.247-3.45-1.247-3.45s0-1.245,2.349-3.583
@@ -936,7 +936,7 @@
 	    c-1.103-2.061-5.094-6.327-4.961-7.021c0.133-0.694,0.828-2.204,2.623-4c1.786-1.786,5.775-6.063,10.328-3.715
 	    c0,0,3.858,0.694,4,2.061c0.134,1.389-0.417,4.96,0.686,6.756c1.102,1.797,2.887,4.134,3.438,4.552c0.552,0.408,2.073,0,2.624,1.653
 	    C453.666,47.088,453.941,48.455,454.348,49.425z"
-                        class="areabox itemhintfollow" title="台北市" /></a>
+                        class="areaboxW itemhintfollow" title="台北市" /></a>
                     <a name="linkbtn" city="03" href="javascript:void(0);">
                         <path style="" d="M430.42,104.25c-0.507,1.157-1.112,2.589-1.423,3.593c-0.551,1.786,0.419,4.541-0.265,6.338
 	    c-0.693,1.796-3.593,1.102-5.102,1.246c-0.509,0.044-1.412,0.209-2.471,0.375c-2.071,0.34-4.694,0.671-5.796,0.032
@@ -974,11 +974,11 @@
 	    c0.145,0.408,2.756,3.858,3.858,5.225c1.102,1.389,9.104,5.797,9.513,6.063c0.406,0.287,2.204,1.939,5.653,4.409
 	    c3.439,2.491-0.143,3.042,0.134,6.481c0.275,3.439,1.102,4.828,2.622,8.399c1.51,3.593,2.889,4.827,3.439,5.378
 	    c0.552,0.551,3.582,3.174,5.236,4.133C416.466,116.473,419.089,116.142,421.16,115.801z"
-                        class="areabox itemhintfollow" title="新竹縣" /></a>
+                        class="areaboxB itemhintfollow" title="新竹縣" /></a>
                     <a name="linkbtn" city="20" href="javascript:void(0);"><path style="" d="M303.482,281.854c0,0.971-1.223,4.387-2.678,4.387c-1.465,0-3.173,0-3.173,0
 		    s-2.922,1.697-4.389,2.193c-1.455,0.485-1.938-2.932-3.891-4.145c-1.951-1.224-2.447-2.193-2.688-2.932
 		    c-0.244-0.727,0.496-5.114,0.496-5.114c3.162-0.485,6.579-0.727,9.499,0.485C299.581,277.951,303.482,280.873,303.482,281.854z"
-                        class="areabox itemhintfollow" title="嘉義市" /></a>
+                        class="areaboxB itemhintfollow" title="嘉義市" /></a>
                     <g>
                         <path style="fill: none; stroke: #FFFFFF;" d="M250.327,304.247c0.133,0.1,0.826,0.495,1.818-1.312
 		    c1.103-2.018,2.205-4.961,2.382-6.978c0.187-2.028-2.568-4.597-2.755-7.902c-0.177-3.308-0.177-6.063-0.177-6.063l0.463-2.701
@@ -1205,7 +1205,7 @@
 		    c0,0,0,2.612,0,3.57c0,0.971-0.408,5.38-0.959,5.798c-0.551,0.408-2.205,0.684-3.449,1.235c-1.235,0.551-1.235,2.072-3.164,2.204
 		    c-1.93,0.133-2.347,0.97-3.449,1.102c-1.102,0.133-2.613-0.551-3.164,0.133c-0.255,0.331-0.364,0.1-0.375,0.11v-0.011" />
                     </g>
-                    <a name="linkbtn" city="17" href="javascript:void(0);"><g class="areabox itemhintfollow" title="澎湖縣">
+                    <a name="linkbtn" city="17" href="javascript:void(0);"><g class="areaboxB itemhintfollow" title="澎湖縣">
                         <path style="" d="M108.027,347.07l-2.062-0.273c0,0-2.888,0.548-3.163,1.168c-0.275,0.62,2.268,2.614,2.268,2.819
 		    c0,0.206-0.824,2.406-1.375,2.544c-0.55,0.139-1.788,1.651-1.788,1.651s-1.032,0.755-1.032,1.101c0,0.342,0.826,1.373,0.826,1.373
 		    l2.751,0.345c0,0,1.786-1.512,2.062-1.649c0.275-0.138,3.85-1.033,3.85-1.033l0.688,0.413c0,0,0,0.346-0.62,0.964
@@ -1275,7 +1275,7 @@
 		    c-0.687,0.207-2.612,0.139-2.612,0.139l-1.788-0.963l-0.344-1.926v-1.032l1.031-0.274c0,0,1.375-1.649,1.169-1.72
 		    c-0.207-0.066-1.031-0.824-1.306-0.755C87.4,318.055,85.75,318.191,85.75,318.191z" />
                     </g></a>
-                    <a name="linkbtn" city="21" href="javascript:void(0);"><g class="areabox itemhintfollow" title="金門縣">
+                    <a name="linkbtn" city="21" href="javascript:void(0);"><g class="areaboxB itemhintfollow" title="金門縣">
                         <path style="" d="M49.321,238.353c1.4,1.517,2.511,0.661,3.304,1.585c0.793,0.925,1.322,2.909,2.247,2.644
 		    c2.379,0.066,2.869-2.841,7.468-2.841c-0.264,1.85-0.132,1.917,0.33,1.917c0.463,0,0.728-0.396,1.388-0.528
 		    c0.661-0.133,2.313-0.992,2.048-1.52c-0.264-0.53-0.594-1.719,0.132-2.05c0.727-0.33,3.503-2.313,4.825-1.189
@@ -1346,7 +1346,7 @@
 		    c-0.529-0.308-0.485-1.058-1.278-1.321c-0.793-0.264-1.454-0.221-2.247-0.221s-1.63-0.396-1.938-0.396
 		    C80.559,243.772,79.722,243.552,80.03,244.389z" />
                     </g></a>
-                    <a name="linkbtn" city="22" href="javascript:void(0);"><g class="areabox itemhintfollow" title="連江縣">
+                    <a name="linkbtn" city="22" href="javascript:void(0);"><g class="areaboxB itemhintfollow" title="連江縣">
                         <path style="" d="M59.271,138.063c-0.198,0.593-0.713,2.587-0.178,3.39c0.536,0.803,0.536,1.785,0.268,2.053
 		    c-0.268,0.267-0.446,1.07-0.179,1.07c0.268,0,1.785,0.446,2.052,1.159c0.268,0.714,0.357,1.695,0.893,1.427
 		    c0.535-0.268,1.427-1.338,1.427-1.338s0.535,0.803,0.892,0.269c0.358-0.535,0.803-1.249,0.803-1.249s1.874-0.893,3.211-1.785
